[gd_scene load_steps=14 format=3 uid="uid://cl05qearacoj8"]

[ext_resource type="Script" path="res://scripts/final.gd" id="1_cyc0y"]
[ext_resource type="FontFile" uid="uid://2acyjhqidwb5" path="res://assets/fonts/Pixellari.ttf" id="1_o1u10"]
[ext_resource type="FontFile" uid="uid://00ch3p5s45x2" path="res://assets/fonts/BOD_BLAI.TTF" id="2_0g3hh"]
[ext_resource type="Script" path="res://scripts/line_edit.gd" id="2_isjwd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cg606"]

[sub_resource type="Theme" id="Theme_0smak"]
default_font = ExtResource("1_o1u10")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o6ntu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_driek"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ruktu"]
bg_color = Color(0.162066, 0.162066, 0.162065, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6lecd"]
bg_color = Color(0.370364, 0.370365, 0.370364, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32uh0"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0orwe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qwaje"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cyc0y")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.0
offset_top = -283.5
offset_right = 251.0
offset_bottom = 283.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Container" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_cg606")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Container"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Container/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="VBoxContainer/Container/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0g3hh")
theme_override_font_sizes/font_size = 35
text = "INSIRA AS INICIAIS"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Container/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Container/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0smak")
theme_override_constants/caret_width = 3
theme_override_fonts/font = ExtResource("2_0g3hh")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_o6ntu")
max_length = 3
caret_blink = true
caret_blink_interval = 0.37
caret_mid_grapheme = true
script = ExtResource("2_isjwd")

[node name="enviar" type="Button" parent="VBoxContainer/Container/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("2_0g3hh")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_driek")
theme_override_styles/hover = SubResource("StyleBoxFlat_ruktu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6lecd")
theme_override_styles/normal = SubResource("StyleBoxFlat_32uh0")
text = "ENVIAR"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Container/HBoxContainer"]
layout_mode = 2

[node name="ScorePlayer" type="Label" parent="VBoxContainer/Container/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0g3hh")
theme_override_font_sizes/font_size = 35
text = "SCORE
"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Container/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0orwe")

[node name="Container2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qwaje")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Container2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 320

[node name="nomes" type="Label" parent="VBoxContainer/Container2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0g3hh")
theme_override_font_sizes/font_size = 30
text = "NOMES"

[node name="scores" type="Label" parent="VBoxContainer/Container2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0g3hh")
theme_override_font_sizes/font_size = 30
text = "SCORES"

[connection signal="pressed" from="VBoxContainer/Container/HBoxContainer/VBoxContainer/HBoxContainer/enviar" to="." method="_on_enviar_pressed"]
